--- a/src/app/form/lastname-field/lastname-field.component.html
+++ b/src/app/form/lastname-field/lastname-field.component.html
@@ -1,6 +1,6 @@
 <div class="mb-4 form-group">
-  <label class="form-label" for="lastName">Nom<span class="text-danger">*</span></label>
-  <input [formControl]="lastNameControl" [ngClass]="{'is-invalid':submitted && lastNameControl.invalid}" type="text" class="form-control form-control-lg" placeholder="Mark" aria-label="Mark" name="lastName" id="lastName" required>
+  <label class="form-label" [for]="id">Nom<span class="text-danger">*</span></label>
+  <input [formControl]="lastNameControl" [ngClass]="{'is-invalid':submitted && lastNameControl.invalid}" type="text" class="form-control form-control-lg" placeholder="Mark" aria-label="Mark" name="lastName" [id]="id" required>
   <div *ngIf="submitted && lastNameControl?.errors?.['required']" class="text-danger">
     Merci de saisir votre nom.
   </div>
