--- a/src/app/form/password-field/password-field.component.html
+++ b/src/app/form/password-field/password-field.component.html
@@ -1,7 +1,7 @@
 <div class="mb-4 form-group">
-  <label class="form-label" for="password">Mot de passe<span class="text-danger">* </span> <i class="bi-info-circle text-primary size-bi" data-bs-toggle="modal" data-bs-target="#userPassword"></i></label>
+  <label class="form-label" [for]="id">Mot de passe<span class="text-danger">* </span> <i class="bi-info-circle text-primary size-bi" data-bs-toggle="modal" data-bs-target="#userPassword"></i></label>
   <div class="input-group-merge">
-    <input [formControl]="passwordControl" [ngClass]="{'is-invalid':submitted && passwordControl.invalid}" type="password" class="js-toggle-password form-control form-control-lg" name="password" id="password" placeholder="Mot de passe fort" aria-label="Mot de passe fort." required minlength="8"
+    <input [formControl]="passwordControl" [ngClass]="{'is-invalid':submitted && passwordControl.invalid}" type="password" class="js-toggle-password form-control form-control-lg" name="password" [id]="id" placeholder="Mot de passe fort" aria-label="Mot de passe fort." required minlength="8"
            data-hs-toggle-password-options='{
              "target": [".js-toggle-password-target-1", ".js-toggle-password-target-2"],
              "defaultClass": "bi-eye-slash",
@@ -19,3 +19,31 @@
   </div>
 </div>
 
+<!-- Modal user password-->
+<div class="modal fade" id="userPassword" tabindex="-1" role="dialog" aria-labelledby="userPassword" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="userPasswordLabel">Information</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <p>Le mot de passe est obligatoire uniquement lors de la création ou de la modification du mot de passe d'un compte existant.</p>
+        <div>
+          <p>Le mot de passe doit respecter les critères suivants :</p>
+          <ul>
+            <li>Contenir au moins une lettre majuscule</li>
+            <li>Contenir au moins une lettre minuscule</li>
+            <li>Contenir au moins un chiffre</li>
+            <li>Avoir une longueur minimale de 8 caractères</li>
+            <li>Autoriser les caractères spéciaux suivants : - + _ ! ?</li>
+          </ul>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-white" data-bs-dismiss="modal">Fermer</button>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- End Modal -->
