--- a/src/app/form/select-civility/select-civility.component.html
+++ b/src/app/form/select-civility/select-civility.component.html
@@ -1,7 +1,7 @@
 <div class="mb-4 form-group">
-  <label class="form-label" for="civility">Civilité<span class="text-danger">*</span></label>
-  <select [formControl]="civilityControl" [ngClass]="{'is-invalid':submitted && civilityControl?.invalid}" class="form-control form-control-lg" name="civility" id="civility" required>
-    <option value="M." selected>M.</option>
+  <label class="form-label" [for]="id">Civilité<span class="text-danger">*</span></label>
+  <select [formControl]="civilityControl" [ngClass]="{'is-invalid':submitted && civilityControl.invalid}" class="form-control form-control-lg" name="civility" [id]="id" required>
+  <option value="M." selected>M.</option>
     <option value="Mme">Mme</option>
     <option value="Mlle">Mlle</option>
   </select>
